# whatcable-gnome

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.MIT  README.md  REVIEW.md
.claude/: settings.json
.claude/skills/analyze-git-history/: SKILL.md  churn-in-branches.sh  hot-files.sh
.claude/skills/implicit-requirements/: SKILL.md  list-symbols.sh  rank-by-dependents.sh
.claude/skills/kent-beck-style/: SKILL.md
.claude/skills/ousterhout-principles/: SKILL.md
.claude/skills/ousterhout-red-flags/: SKILL.md
.github/workflows/: release.yml
docs/examples/: README.md
docs/examples/01-port-disconnected/sys/class/typec/port0/: supported_accessory_modes
docs/examples/02-pd-charger-passive-3a/sys/class/typec/port0/: port_type  power_operation_mode  usb_capability  usb_power_delivery
docs/examples/02-pd-charger-passive-3a/sys/class/typec/port0-cable/identity/: id_header
docs/examples/02-pd-charger-passive-3a/sys/class/typec/port0-partner/: type
docs/examples/02-pd-charger-passive-3a/sys/class/typec/port0-partner/identity/: cert_stat  id_header  product
docs/examples/03-tb4-dock-active-5a-altmode/sys/class/typec/port0/: data_role
docs/examples/03-tb4-dock-active-5a-altmode/sys/class/typec/port0-cable/identity/: cert_stat  id_header  product  product_type_vdo1
docs/examples/03-tb4-dock-active-5a-altmode/sys/class/typec/port0-partner.0/: description  vdo
docs/examples/03-tb4-dock-active-5a-altmode/sys/class/typec/port0-partner.1/: vdo
docs/examples/03-tb4-dock-active-5a-altmode/sys/class/typec/port0-partner/identity/: cert_stat  id_header  product
gnome-extension/: Makefile  extension.js  metadata.json  prefs.js  stylesheet.css
gnome-extension/lib/: cable-info.js  charging-diagnostic.js  device-manager.js  device-summary.js  icon-stats.js  pd-decoder.js  power-delivery.js  sysfs-allowlist.js  sysfs.js  sysfsToJson.js  typec-port.js  usb-class-db.js  usb-device.js  vendor-db.js
gnome-extension/schemas/: org.gnome.shell.extensions.whatcable.gschema.xml
src/cli/: CMakeLists.txt  main.cpp
src/plasmoid/: CMakeLists.txt
src/plasmoid/plugin/: qmldir
